--- a/.github/workflows/bump-pom.yml
+++ b/.github/workflows/bump-pom.yml
@@ -32,6 +32,6 @@ jobs:
           with:
             url: ${{ env.API_URL }}
             filePath: target/classes/META-INF/sbom/application.cdx.json
-            secretAccessKey: wpjCgsKhfG3CpUECwo7CYRMxO3VJSsKMwojCmcO2
-            accessKey: zfnrscowc0wdiskycskq 
+            secretAccessKey: {{secrets.SECRET_ACCESS_KEY}}
+            accessKey: {{variables.ACCES_KEY_CYBEATS}} 
             subType: application
